--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.13",
+    "lucide-react": "^0.544.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
