--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
