--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# Local Secrets
 .env*.local
+.env
+serviceAccountKey.json
 
 # vercel
 .vercel
