--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "next build",
     "build:export": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:seed": "node scripts/seed.mjs"
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
     "next": "14.2.4",
@@ -20,10 +23,12 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
