--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
