--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^4.2.11",
+    "resend": "^6.1.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
