--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:seed": "node scripts/seed.mjs"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.3",
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
