--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18",
     "react-email": "^4.2.11",
     "react-hook-form": "^7.63.0",
+    "recharts": "^2.12.7",
     "resend": "^6.1.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
